--- a/src/global.css
+++ b/src/global.css
@@ -15,3 +15,18 @@
     width: 13px;
     box-shadow: inset 0 0 5px #D0D0D0;
   }
+
+
+  input:-webkit-autofill {
+    background-color: #f0fff000!important; /* Change to your desired background color */
+  }
+
+  input:-webkit-autofill {
+    transition: background-color 5000s ease-in-out 0s;
+  }
+  
+  /* Optional: Resetting transition delay */
+  input:-webkit-autofill {
+    -webkit-transition-delay: 9999s;
+    transition-delay: 9999s;
+  }
